JAXB のテストを Java 21 まで動くように修正